# senyai_auth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: build.sh  dev.md  overview.pikchr
senyai_auth/server_api/: __init__.py  __main__.py  api.py  app.py  auth.py  db.py  download_static.sh  permissions.py  test_api.py  test_db.py
senyai_auth/server_api/api/: __init__.py  auth.py  blocklist.py  exceptions.py  invite.py  ldap.py  project.py  role.py  ui.py  user.py
senyai_auth/server_dav/: __init__.py  __main__.py  afs.py  test_dav.py
senyai_auth/server_ftp/: __init__.py  ftps.py  patched_aioftp_server.py  path_io.py  user_manager.py
senyai_auth/server_ldap/: __init__.py  ldap.py
senyai_auth/server_web/: .gitignore  __init__.py  app.py  babel.cfg  babel.sh  download_static.sh  forms.py  helpers.py  package.json
senyai_auth/server_web/src/: main.js
senyai_auth/server_web/src/components/: password_field.js  role_editor.js
senyai_auth/server_web/static/css/: base.css
senyai_auth/server_web/static/js/: main.js  switch_theme.js
senyai_auth/server_web/templates/: base.html  invite.html  invite_result.html  login.html  register.html  user.html
senyai_auth/server_web/templates/forms/: add_roles_form.html  base_modal.html  edit_roles_form.html  invite_form.html  manage_user_roles_form.html  update_user_form.html  upsert_project_form.html  upsert_role_form.html
systemd/: Makefile  senyai-auth-api.service  senyai-auth-dav.service  senyai-auth-forgejo.service  senyai-auth-ldap.service  senyai-auth-web.service  senyai-auth.target
(+19 files in other folders)
